--- a/Spam_cls_NLP.ipynb
+++ b/Spam_cls_NLP.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "828d25e3",
+   "id": "4580bfc7",
    "metadata": {
     "scrolled": true
    },
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c75e2b6",
+   "id": "4a82f026",
    "metadata": {},
    "source": [
     "# Import Libraries"
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "518be466",
+   "id": "1b859b33",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e92d3322",
+   "id": "72881c67",
    "metadata": {},
    "source": [
     "# Data Input "
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "51fdb522",
+   "id": "893a02b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "690c1d03",
+   "id": "fd685ead",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9f69a92a",
+   "id": "f1a4aa42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "903d5728",
+   "id": "c5143aad",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "facd535a",
+   "id": "7868c81f",
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1d6124b",
+   "id": "51b6d568",
    "metadata": {},
    "source": [
     "# Pre-processing Data With NLTK(NLP)"
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f54b0d01",
+   "id": "ad0ab064",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "37ce90a3",
+   "id": "d912f49c",
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e0b7fd01",
+   "id": "01eb3fe8",
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e67cd00c",
+   "id": "7ebba11c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "88fca6db",
+   "id": "7ccb71a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a081e04",
+   "id": "cb16b422",
    "metadata": {},
    "source": [
     "# Feature Engineering Using the Bag-of-Words Model vs TF-IDF Technique"
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91fed6b7",
+   "id": "9b7f7546",
    "metadata": {},
    "source": [
     "# Bag-Of-Words Model"
@@ -428,29 +428,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "4eefc2d9",
+   "execution_count": 39,
+   "id": "3b2730a1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\ncv = CountVectorizer(max_features=2500, ngram_range=(1,3))\\nX = cv.fit_transform(corpus).toarray()\\ny = df[\"CATEGORY\"]\\n'"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "'''\n",
     "cv = CountVectorizer(max_features=2500, ngram_range=(1,3))\n",
     "X = cv.fit_transform(corpus).toarray()\n",
-    "y = df[\"CATEGORY\"]"
+    "y = df[\"CATEGORY\"]\n",
+    "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "fe7d94bd",
+   "execution_count": 40,
+   "id": "fbb3bc60",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nx_train, x_test, y_train, y_test = train_test_split(X, y, test_size=0.20, random_state=1, stratify=y)\\n'"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "x_train, x_test, y_train, y_test = train_test_split(X, y, test_size=0.20, random_state=1, stratify=y)"
+    "'''\n",
+    "x_train, x_test, y_train, y_test = train_test_split(X, y, test_size=0.20, random_state=1, stratify=y)\n",
+    "'''"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3abe75d3",
+   "id": "cc3cd07c",
    "metadata": {},
    "source": [
     "# TF-IDF Technique"
@@ -458,8 +484,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "0f3cbf4a",
+   "execution_count": 41,
+   "id": "fad24027",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,12 +493,12 @@
     "X = tf.fit_transform(corpus).toarray()\n",
     "\n",
     "x_train, x_test, y_train, y_test = train_test_split(\n",
-    "  X, y, test_size=0.20, random_state=1)"
+    "  X, y, test_size=0.33, random_state=1)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8e80c48c",
+   "id": "c7dbb15e",
    "metadata": {},
    "source": [
     "# Creating and Training Your Model"
@@ -480,8 +506,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "f34ff81e",
+   "execution_count": 42,
+   "id": "76d9860a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,8 +516,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "7d7a23eb",
+   "execution_count": 43,
+   "id": "cb1b8099",
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +526,7 @@
        "MultinomialNB()"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,8 +537,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "fe3f1921",
+   "execution_count": 44,
+   "id": "1a1d7049",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26893f23",
+   "id": "56564e0b",
    "metadata": {},
    "source": [
     "# Model Evaluation"
@@ -530,8 +556,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "b7cf0ff5",
+   "execution_count": 45,
+   "id": "5a717e49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,15 +566,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "4e88a79b",
+   "execution_count": 46,
+   "id": "12eeb95f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9635461604831751\n"
+      "0.9636878702034509\n"
      ]
     }
    ],
@@ -558,8 +584,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "b935cbbb",
+   "execution_count": 47,
+   "id": "6a06dc04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracy_model_test = accuracy_score(test_pred,y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "969bb37f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9508625196027183\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(accuracy_model_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "4fa7198a",
    "metadata": {},
    "outputs": [
     {
@@ -568,12 +622,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.99      0.95      0.97      3249\n",
-      "           1       0.90      0.99      0.94      1387\n",
+      "           0       0.99      0.95      0.97      2714\n",
+      "           1       0.90      0.98      0.94      1169\n",
       "\n",
-      "    accuracy                           0.96      4636\n",
-      "   macro avg       0.95      0.97      0.96      4636\n",
-      "weighted avg       0.97      0.96      0.96      4636\n",
+      "    accuracy                           0.96      3883\n",
+      "   macro avg       0.95      0.97      0.96      3883\n",
+      "weighted avg       0.97      0.96      0.96      3883\n",
       "\n"
      ]
     }
@@ -584,8 +638,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "8b511305",
+   "execution_count": 50,
+   "id": "dfb65e85",
    "metadata": {},
    "outputs": [
     {
@@ -594,12 +648,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.99      0.94      0.96       825\n",
-      "           1       0.86      0.98      0.92       335\n",
+      "           0       0.99      0.94      0.96      1367\n",
+      "           1       0.86      0.98      0.92       546\n",
       "\n",
-      "    accuracy                           0.95      1160\n",
-      "   macro avg       0.93      0.96      0.94      1160\n",
-      "weighted avg       0.95      0.95      0.95      1160\n",
+      "    accuracy                           0.95      1913\n",
+      "   macro avg       0.93      0.96      0.94      1913\n",
+      "weighted avg       0.96      0.95      0.95      1913\n",
       "\n"
      ]
     }
@@ -611,7 +665,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcb7fb25",
+   "id": "b2cdf6d3",
    "metadata": {},
    "outputs": [],
    "source": []
