Spam Cls With NLP

--- a/Spam_cls_NLP.ipynb
+++ b/Spam_cls_NLP.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4580bfc7",
+   "id": "f9278e33",
    "metadata": {
     "scrolled": true
    },
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a82f026",
+   "id": "909227a6",
    "metadata": {},
    "source": [
     "# Import Libraries"
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1b859b33",
+   "id": "213c8cdf",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72881c67",
+   "id": "a8d89c69",
    "metadata": {},
    "source": [
     "# Data Input "
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "893a02b7",
+   "id": "d59cb282",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fd685ead",
+   "id": "9ac45d15",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f1a4aa42",
+   "id": "300325dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c5143aad",
+   "id": "d4515399",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7868c81f",
+   "id": "d6749b58",
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51b6d568",
+   "id": "b0982111",
    "metadata": {},
    "source": [
     "# Pre-processing Data With NLTK(NLP)"
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ad0ab064",
+   "id": "c0fb8c41",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d912f49c",
+   "id": "a7188a09",
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "01eb3fe8",
+   "id": "c22bdb3e",
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "7ebba11c",
+   "id": "e86ca20e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "7ccb71a8",
+   "id": "811742bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb16b422",
+   "id": "df28ea47",
    "metadata": {},
    "source": [
     "# Feature Engineering Using the Bag-of-Words Model vs TF-IDF Technique"
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b7f7546",
+   "id": "e2f0d55c",
    "metadata": {},
    "source": [
     "# Bag-Of-Words Model"
@@ -429,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "3b2730a1",
+   "id": "6d28e7ac",
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "fbb3bc60",
+   "id": "1c958301",
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc3cd07c",
+   "id": "cf531654",
    "metadata": {},
    "source": [
     "# TF-IDF Technique"
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "fad24027",
+   "id": "45e3abb4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7dbb15e",
+   "id": "77c8aeeb",
    "metadata": {},
    "source": [
     "# Creating and Training Your Model"
@@ -507,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "76d9860a",
+   "id": "bfb67cac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "cb1b8099",
+   "id": "76bb089a",
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "1a1d7049",
+   "id": "9f58bf86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56564e0b",
+   "id": "fa17a1f3",
    "metadata": {},
    "source": [
     "# Model Evaluation"
@@ -557,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "5a717e49",
+   "id": "eb1cd38e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "12eeb95f",
+   "id": "bd694e64",
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "6a06dc04",
+   "id": "76e80c29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "969bb37f",
+   "id": "5b7b9ba2",
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "4fa7198a",
+   "id": "6ec9df62",
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "dfb65e85",
+   "id": "689db698",
    "metadata": {},
    "outputs": [
     {
@@ -663,9 +663,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "893a6b81",
+   "metadata": {},
+   "source": [
+    "# Results of Classifying Your Own Messages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "64b82207",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicting...\n",
+      "The message is spam\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Predicting...')\n",
+    "\n",
+    "message = [\"You won 10000 dollars, please provide your account details,So that we can transfer the money\"]\n",
+    "\n",
+    "message_vector = tf.transform(message)\n",
+    "category = model.predict(message_vector)\n",
+    "print(\"The message is\", \"spam\" if category == 1 else \"not spam\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2cdf6d3",
+   "id": "11a2e29d",
    "metadata": {},
    "outputs": [],
    "source": []
