Spam Cls With NLP

--- a/Spam_cls_NLP.ipynb
+++ b/Spam_cls_NLP.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f9278e33",
+   "id": "8b13d7a2",
    "metadata": {
     "scrolled": true
    },
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "909227a6",
+   "id": "4590c6fd",
    "metadata": {},
    "source": [
     "# Import Libraries"
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "213c8cdf",
+   "id": "f6912918",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8d89c69",
+   "id": "443e48cf",
    "metadata": {},
    "source": [
     "# Data Input "
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d59cb282",
+   "id": "84f07cb9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9ac45d15",
+   "id": "b4927298",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "300325dd",
+   "id": "0e947815",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d4515399",
+   "id": "b5cdfd60",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d6749b58",
+   "id": "edae23b5",
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0982111",
+   "id": "8699a105",
    "metadata": {},
    "source": [
     "# Pre-processing Data With NLTK(NLP)"
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c0fb8c41",
+   "id": "62b444a7",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a7188a09",
+   "id": "04a6ade5",
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c22bdb3e",
+   "id": "64323ec9",
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e86ca20e",
+   "id": "ff246505",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "811742bc",
+   "id": "8997247e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df28ea47",
+   "id": "256d18e3",
    "metadata": {},
    "source": [
     "# Feature Engineering Using the Bag-of-Words Model vs TF-IDF Technique"
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2f0d55c",
+   "id": "10dc6819",
    "metadata": {},
    "source": [
     "# Bag-Of-Words Model"
@@ -429,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "6d28e7ac",
+   "id": "c3f20a38",
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "1c958301",
+   "id": "08af653e",
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf531654",
+   "id": "591a2db7",
    "metadata": {},
    "source": [
     "# TF-IDF Technique"
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "45e3abb4",
+   "id": "0fab5a2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77c8aeeb",
+   "id": "3227e2ed",
    "metadata": {},
    "source": [
     "# Creating and Training Your Model"
@@ -507,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "bfb67cac",
+   "id": "780225b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "76bb089a",
+   "id": "eefa3cc8",
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "9f58bf86",
+   "id": "e6c99bf0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa17a1f3",
+   "id": "ae517134",
    "metadata": {},
    "source": [
     "# Model Evaluation"
@@ -557,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "eb1cd38e",
+   "id": "d39a624f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "bd694e64",
+   "id": "3d95fbba",
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "76e80c29",
+   "id": "3ac3bfb9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "5b7b9ba2",
+   "id": "6807e32f",
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "6ec9df62",
+   "id": "2a983b0b",
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "689db698",
+   "id": "46edfec5",
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "893a6b81",
+   "id": "1f8db0a5",
    "metadata": {},
    "source": [
     "# Results of Classifying Your Own Messages"
@@ -672,8 +672,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "64b82207",
+   "execution_count": 54,
+   "id": "d5332ad2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def result(message):\n",
+    "    print('Predicting...')\n",
+    "    message_vector = tf.transform(message)\n",
+    "    category = model.predict(message_vector)\n",
+    "    print(\"The message is\", \"spam\" if category == 1 else \"not spam\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "d96e2a3d",
    "metadata": {},
    "outputs": [
     {
@@ -686,19 +700,34 @@
     }
    ],
    "source": [
-    "print('Predicting...')\n",
-    "\n",
-    "message = [\"You won 10000 dollars, please provide your account details,So that we can transfer the money\"]\n",
-    "\n",
-    "message_vector = tf.transform(message)\n",
-    "category = model.predict(message_vector)\n",
-    "print(\"The message is\", \"spam\" if category == 1 else \"not spam\")"
+    "message1 = [\"You won 10000 dollars, please provide your account details,So that we can transfer the money\"]\n",
+    "result(message1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "3a8883d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicting...\n",
+      "The message is not spam\n"
+     ]
+    }
+   ],
+   "source": [
+    "message2 = [\"hey racheal, the meeting is postponed to monday\"]\n",
+    "result(message2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11a2e29d",
+   "id": "48d1d980",
    "metadata": {},
    "outputs": [],
    "source": []
